feat: heesongjurie love love

--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "author": "hanheesong <gmlthd0908@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
-    "prestart": "tsc"
+    "start": "tsc-watch --onSuccess  \" node dist/index.js\" "
+  },
+  "devDependencies": {
+    "tsc-watch": "^1.0.31",
+    "typescript-tools": "^0.3.1"
+  },
+  "dependencies": {
+    "crypto-js": "^3.1.9-1",
+    "typescript": "^3.2.2"
   }
 }
